# BranchKit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml  test.yml
docs/: ARCHITECTURE.md  BUILD_PROMPTS.md  DESIGN_SPEC.md  GITKRAKEN_WORKFLOWS.md  QA.md
scripts/: check-contrast.mjs  check-icon-buttons.mjs  dev-cert-setup.sh  dev-signed.sh  perf-graph.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.svelte-kit/: ambient.d.ts
src-tauri/src/: credentials.rs  error.rs  events.rs  lib.rs  main.rs  repo.rs  settings.rs  state.rs  watcher.rs
src-tauri/src/ai/: anthropic.rs  download.rs  local.rs  mod.rs  ollama.rs  openai_compat.rs  prompt.rs  remote.rs  versions.rs
src-tauri/src/git/: blame.rs  blob.rs  commit.rs  conflict.rs  diff.rs  discard.rs  exec.rs  history.rs  identity.rs  log.rs  mod.rs  ops.rs  refs.rs  remote.rs  stage.rs  stash.rs  status.rs  worktree.rs
src-tauri/src/github/: api.rs  mod.rs
src-tauri/tests/: blob_tests.rs  conflict_tests.rs  diff_tests.rs  log_tests.rs  ops_tests.rs  refs_tests.rs  security_tests.rs  stash_tests.rs  status_tests.rs  worktree_tests.rs
src-tauri/tests/common/: mod.rs
src/lib/: actions.ts  focus.ts  format.test.ts  format.ts  fuzzy.test.ts  fuzzy.ts  ipc.ts  markdown.ts  platform.ts  theme.test.ts  tokens.css  types.ts
src/lib/components/: ThemeProvider.svelte
src/lib/components/diff/: DiffViewer.svelte  FileInspector.svelte
src/lib/components/graph/: AheadBehindPopover.svelte  BadgeTooltip.svelte  BranchMenu.svelte  BranchNameEditor.svelte  CiDot.svelte  CommitMenu.svelte  DetachGuardPopover.svelte  DropMenu.svelte  GraphColumnHeader.svelte  GraphRow.svelte  GraphView.svelte  RefPill.svelte  StashMenu.svelte  WipGraphRow.svelte
src/lib/components/keep-panel/: ConflictBanner.svelte  ConflictRegionCard.svelte  ConflictedFilesSection.svelte  KeepPanel.svelte
src/lib/components/panel/: CommitComposer.svelte  CommitDetailPanel.svelte  CommitExplanationPanel.svelte  ComparePanel.svelte  CreatePrPanel.svelte  FileRow.svelte  FileTree.svelte  LeftPanel.svelte  PrDetailPanel.svelte  RightPanel.svelte  WorkingDirectoryPanel.svelte
src/lib/components/settings/: RevealSection.svelte  SettingField.svelte  SettingsWindow.svelte
src/lib/components/shell/: CloneDialog.svelte  CommandPalette.svelte  ContextMenu.svelte  CreateWorktreeDialog.svelte  CredentialDialog.svelte  EmptyState.svelte  FirstLaunch.svelte  RepoPicker.svelte  RepoTabs.svelte  ToastStack.svelte  Toolbar.svelte
src/lib/diff/: DiffViewer.svelte  highlight.ts  language.ts  pairLines.test.ts  pairLines.ts  wordDiff.test.ts  wordDiff.ts
src/lib/graph/: avatars.test.ts  avatars.ts  divergenceCache.ts  geometry.test.ts  geometry.ts  lanes.test.ts  lanes.ts  panel.test.ts  panel.ts  pills.test.ts  pills.ts  wip.test.ts  wip.ts
src/lib/status/: glyphs.ts  sections.test.ts  sections.ts  tree.test.ts  tree.ts
src/lib/stores/: ai.svelte.ts  appSettings.svelte.ts  behindNotifier.test.ts  behindNotifier.ts  branchEdit.svelte.ts  commandPalette.svelte.ts  commitDraft.svelte.ts  commitDraft.test.ts  commitExplanation.svelte.ts  createPrDraft.svelte.ts  credentialDialog.svelte.ts  diffView.svelte.ts  dnd.svelte.ts  fileInspector.svelte.ts  filter.svelte.ts  github.svelte.ts  githubChecks.svelte.ts  graph.svelte.ts  graph.test.ts  graphNav.svelte.ts  graphSelection.svelte.ts  graphSelection.test.ts  graphView.svelte.ts  keepPanel.svelte.ts  keepPanel.test.ts  keepSession.svelte.ts  keepSession.test.ts  network.svelte.ts  onboarding.svelte.ts  prPanel.svelte.ts  repo.svelte.ts  repo.test.ts  settings.svelte.ts  settingsWindow.svelte.ts  status.svelte.ts  theme.svelte.ts  toasts.svelte.ts  worktreeDialog.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/debug/graph/: +page.svelte
src/routes/tokens/: +page.svelte
