[package]
name = "branchkit"
version = "0.1.0"
description = "BranchKit — a free, open-source git client"
authors = ["BranchKit contributors"]
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "branchkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# async process spawning for the git execution layer (ARCHITECTURE.md §3); tauri commands are
# already async fns running on tokio's runtime.
tokio = { version = "1", features = ["process", "time", "io-util", "rt-multi-thread", "macros", "sync"] }
# progress-percentage regex for long-running git ops (ARCHITECTURE.md §3.1) and hunk-header parsing (§6.2)
regex = "1"

[target.'cfg(unix)'.dependencies]
# process-group kill on timeout (ARCHITECTURE.md §3 rule 3)
libc = "0.2"

[dev-dependencies]
# builds real repos in tempdirs for the git integration test harness (ARCHITECTURE.md §12)
tempfile = "3"

